método de login sendo desenvolvido

--- a/frontend/src/pages/teacher/initial-login-teacher.html
+++ b/frontend/src/pages/teacher/initial-login-teacher.html
@@ -21,7 +21,7 @@
                 <p class="acess-text">Para começar, nos diga quem está acessando?</p>
             </div>
             <div class="section-buttons">
-                <button type="button" class="btn btn-primary">Professor</button>
+                <button onclick="window.location.href='login-page-teacher.html'" type="button" class="btn btn-primary">Professor</button>
                 <button type="button" class="btn btn-secondary">Responsável</button>
             </div>
         </section>
