--- a/frontend/src/responsible/dashboard.html
+++ b/frontend/src/responsible/dashboard.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
-    <script src="teste.js">
+    <!-- <script src="teste.js"> -->
         
-        // import axios from "axios";
+        <!-- // import axios from "axios";
         // // const axios = require("axios").default;
         // console.log(axios.get('https://catfact.ninja/fact'));
-        // export default axios 
-    </script>
+        // export default axios  -->
+    <!-- </script> -->
 </head>
 
 <body>
@@ -246,7 +246,9 @@
                             <div class="card-body">
                                 <h5 class="card-title">Notificações</h5>
 
-                                <script src="teste.js" type="module"></script>
+                                
+                                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+                                <script type="module" src="teste.js" ></script>
 
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
