--- a/frontend/src/pages/teacher/login-page-teacher.html
+++ b/frontend/src/pages/teacher/login-page-teacher.html
@@ -10,7 +10,16 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/login-page-style-teacher.css">
-    <script  src="../../../build/pages/teacher/login.js" defer></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.3.5/dist/axios.min.js"></script>
+    <script  type="module" src="../../../build/pages/teacher/login.js" defer></script>
+    <!-- <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Agora você pode chamar a função login após o carregamento completo da página
+            login();
+        });
+        </script> -->
+    <!-- <script type="module"> import { login } from '../../../build/pages/teacher/login.js' </script> -->
     <title>Login</title>
 </head>
 <header>
@@ -36,7 +45,7 @@
                 <input class="input-password" id="password" type="password" placeholder="Senha">
             </div>
         </div>
-        <button type="button" class="btn btn-primary" onclick="login()">Entrar</button>
+        <button type="button" class="btn btn-primary" onclick="logar()">Entrar</button>
     </main>
 
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
