--- a/frontend/src/pages/teacher/login-page-teacher.html
+++ b/frontend/src/pages/teacher/login-page-teacher.html
@@ -45,7 +45,7 @@
                 <input class="input-password" id="password" type="password" placeholder="Senha">
             </div>
         </div>
-        <button type="button" class="btn btn-primary" onclick="logar()">Entrar</button>
+        <button type="button" class="login-btn" onclick="logar()">Entrar</button>
     </main>
 
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
