--- a/frontend/src/pages/guardian/login-page-guardian.html
+++ b/frontend/src/pages/guardian/login-page-guardian.html
@@ -35,7 +35,7 @@
                 <input class="input-password" type="password" placeholder="Senha">
             </div>
         </div>
-        <button type="button" class="btn btn-primary">Entrar</button>
+        <button type="button" class="login-btn">Entrar</button>
     </main>
 
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
