finalizado função da agenda, feito função de login do Guardian, iniciado parte do dashboard, com a busca dos filhos.

--- a/frontend/src/pages/guardian/dashboard-guardian.html
+++ b/frontend/src/pages/guardian/dashboard-guardian.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/dashboard-guardian.css">
+    <script type="module" src="../../../build/pages/guardian/dashboard.js" defer></script>
     <title>Dashboard Responsável</title>
 </head>
 
@@ -46,8 +47,9 @@
         <div class="summary">
             <div class="summary-children">
                 <h5>Meus filhos</h5>
-                <div class="children">
-                    <div class="best-children-one">""</div>
+                <div class="children" id="children">
+                    <div class="best-children-one" id="best-children-one">
+                    </div>
                     <div class="best-children-two">""</div>
                     <div class="best-children-three">""</div>
                 </div>
