--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
-    <script src="agenda.js" defer></script>
+    <script type="module" src="../../../build/pages/teacher/schedule.js" defer></script>
     <title>Agenda</title>
 </head>
 
@@ -51,12 +51,12 @@
             <h4>Agenda</h4>
         </div>
         <div class="classes-schedule">
-            <div class="class-one-schedule">
+            <!-- <div class="class-one-schedule">
                 <h5>Agenda Turma 1</h5>
                 <span class="material-symbols-outlined" id="add">
                     add
                 </span>
-            </div>
+            </div> -->
         </div>
     </main>
 
