Finalização tela de cadastro admin

--- a/frontend/src/pages/admin/register-users-admin.html
+++ b/frontend/src/pages/admin/register-users-admin.html
@@ -40,33 +40,33 @@
         </div>
     </nav>
     <main>
+        <div class="page-title">
+            <h4>Cadastrar Usuários</h4>
+        </div>
         <div class="register-info">
-            <div class="page-title">
-                <h4>Cadastrar Usuários</h4>
-            </div>
             <div class="register-info-name">
-                <input type="text" placeholder="Nome">
-                <input type="text" placeholder="Sobrenome">
+                <input type="text" placeholder="Nome" class="input-name">
+                <input type="text" placeholder="Sobrenome" class="input-surname">
             </div>
             <div class="register-info-adress">
-                <input type="text" placeholder="Logradouro">
-                <input type="number" placeholder="nº">
-                <input type="text" placeholder="Bairro">
-                <input type="text" placeholder="Cidade">
+                <input type="text" placeholder="Logradouro" class="input-street">
+                <input type="number" placeholder="nº" class="input-adress-number">
+                <input type="text" placeholder="Bairro" class="input-neighborhood">
+                <input type="text" placeholder="Cidade" class="input-city">
             </div>
             <div class="register-info-adress-complement">
-                <input type="text" placeholder="Complemento">
-                <input type="number" placeholder="CEP">
-                <input type="text" placeholder="País">
+                <input type="text" placeholder="Complemento" class="input-complement">
+                <input type="number" placeholder="CEP" class="input-postalcode">
+                <input type="text" placeholder="País" class="input-country">
             </div>
             <div class="register-info-personal">
-                <input type="date" placeholder="Data de nascimento">
-                <input type="number" placeholder="CPF">
-                <input type="tel" placeholder="Celular">
+                <input type="date" placeholder="Data de nascimento" class="input-birthdate">
+                <input type="number" placeholder="CPF" class="input-cpf">
+                <input type="tel" placeholder="Celular" class="input-telephone">
             </div>
             <div class="register-info-login">
-                <input type="email" placeholder="E-mail">
-                <input type="password" placeholder="Senha">
+                <input type="email" placeholder="E-mail" class="input-email">
+                <input type="password" placeholder="Senha" class="input-password">
             </div>
             <div class="register-info-check">
                 <h5>Selecione o tipo de cadastro:</h5>
@@ -75,7 +75,9 @@
                     <input type="radio" name="option">Professor
                 </div>
             </div>
-            <button class="register-info-btn">Cadastrar</button>
+            <div class="button-register">
+                <button class="register-info-btn">Cadastrar</button>
+            </div>
         </div>
     </main>
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
