criand tela de avaliação de alunos de uma turma.

--- a/frontend/src/pages/teacher/dashboard-teacher.html
+++ b/frontend/src/pages/teacher/dashboard-teacher.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#">Turmas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Desempenho</a>
+                        <a class="nav-link" href="performance.html">Desempenho</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="schedule-teacher.html">Agenda</a>
