continuação função e tela de avaliação de alunos

--- a/frontend/src/pages/teacher/performance.html
+++ b/frontend/src/pages/teacher/performance.html
@@ -48,7 +48,7 @@
             cursor: pointer;
         }
     </style>
-    <title>Perfo</title>
+    <title>Perfomance</title>
 </head>
 
 <body>
@@ -112,7 +112,9 @@
                     <label for="star2"><i class="fas fa-star"></i></label>
                     <input type="radio" id="star1" name="rating" value="1">
                     <label for="star1"><i class="fas fa-star"></i></label>
+
                 </div>
+                <button type="button" id="btnSubmit">Enviar</button>
             </div>
         </div>
     </main>
