--- a/frontend/src/pages/admin/register-users-admin.html
+++ b/frontend/src/pages/admin/register-users-admin.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/register-users-admin.css">
+
+    <script type="module" src="../../../build/pages/admin/register.js" defer></script>
     <title>Cadastrar Ususários</title>
 </head>
 
