--- a/frontend/src/pages/guardian/dashboard-guardian.html
+++ b/frontend/src/pages/guardian/dashboard-guardian.html
@@ -56,6 +56,9 @@
             </div>
             <div class="summary-notification">
                 <h5>Notificações</h5>
+                <div class="notification">
+                    
+                </div>
             </div>
         </div>
         <div class="summary-last-info">
