--- a/frontend/src/pages/teacher/performance.html
+++ b/frontend/src/pages/teacher/performance.html
@@ -86,15 +86,15 @@
     </nav>
     <main>
         <div class="page-title">
-            <h4>Agenda</h4>
+            <h4>Avaliar</h4>
         </div>
         <div class="classes-schedule">
-            <div class="class-one-schedule">
+            <!-- <div class="class-one-schedule">
                 <h5>Agenda Turma 1</h5>
                 <div class="rating">
-                    <input type="radio" id="star10" name="rating" value="10">
+                    <input type="radio" id="star10" name="" value="10">
                     <label for="star10"><i class="fas fa-star"></i></label>
-                    <input type="radio" id="star9" name="rating" value="9">
+                    <input type="radio" id="star9" name="a" value="9">
                     <label for="star9"><i class="fas fa-star"></i></label>
                     <input type="radio" id="star8" name="rating" value="8">
                     <label for="star8"><i class="fas fa-star"></i></label>
@@ -115,7 +115,7 @@
 
                 </div>
                 <button type="button" id="btnSubmit">Enviar</button>
-            </div>
+            </div> -->
         </div>
     </main>
 
