--- a/frontend/src/pages/teacher/classes-teacher.html
+++ b/frontend/src/pages/teacher/classes-teacher.html
@@ -8,10 +8,12 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/frontend/src/styles/dashboard-teacher.css">
-    <script type="module" src="../../../build/pages/teacher/dash.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Dashboard</title>
+    <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
+    <script type="module" src="../../../build/pages/teacher/schedule.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <title>Agenda</title>
 </head>
 
 <body>
@@ -48,54 +50,25 @@
         </div>
     </nav>
     <main>
-        <div class="basic-info">
-            <div class="basic-info-classes">
-                <span class="material-symbols-outlined classes-icon">
-                    school
-                </span>
-                <div class="basic-info-classes-text">
-                    <h5>Turmas</h5>
-                    <p id="countClasses">0</p>
-                </div>
-            </div>
-            <div class="basic-info-students">
-                <span class="material-symbols-outlined students-icon">
-                    child_care
-                </span>
-                <div class="basic-info-students-text">
-                    <h5>Alunos</h5>
-                    <p id="countStudents">0</p>
-                </div>
-            </div>
-            <div class="basic-info-guardians">
-                <span class="material-symbols-outlined guardians-icon">
-                    family_restroom
-                </span>
-                <div class="basic-info-guardians-text">
-                    <h5>Responsáveis</h5>
-                    <p>0</p>
-                </div>
-            </div>
+        <div class="page-title">
+            <h4>Turmas</h4>
         </div>
-        <div class="summary">
-            <div class="summary-calendar">
-                <h5>Calendário</h5>
-            </div>
-            <div class="summary-best-classes">
-                <h5>Melhores Turmas</h5>
-            </div>
-        </div>
-        <div class="summary-last-info">
-            <div class="last-info-birthdays">
-                <h5>Aniversários</h5>
-            </div>
-            <div class="last-info-best-students">
-                <div class="best-student-one">""</div>
-                <div class="best-student-two">""</div>
-                <div class="best-student-three">""</div>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Accordion Item #1
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                        the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                </div>
             </div>
         </div>
     </main>
+
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
 </body>
 
