--- a/frontend/src/pages/teacher/performance-teacher.html
+++ b/frontend/src/pages/teacher/performance-teacher.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
     <script type="module" src="../../../build/pages/teacher/performance.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <style>
         .rating {
             display: flex;
@@ -66,10 +67,10 @@
                         <a class="nav-link active" aria-current="page" href="dashboard-teacher.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Turmas</a>
+                        <a class="nav-link" href="classes-teacher.html">Turmas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="performance.html">Desempenho</a>
+                        <a class="nav-link" href="performance-teacher.html">Desempenho</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="schedule-teacher.html">Agenda</a>
