--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
     <script type="module" src="../../../build/pages/teacher/schedule.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Agenda</title>
 </head>
 
@@ -28,10 +29,10 @@
                         <a class="nav-link active" aria-current="page" href="dashboard-teacher.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Turmas</a>
+                        <a class="nav-link" href="classes-teacher.html">Turmas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Desempenho</a>
+                        <a class="nav-link" href="performance-teacher.html">Desempenho</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="schedule-teacher.html">Agenda</a>
