--- a/frontend/src/pages/teacher/classes-teacher.html
+++ b/frontend/src/pages/teacher/classes-teacher.html
@@ -8,17 +8,17 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
+    <link rel="stylesheet" href="/frontend/src/styles/classes-teacher.css">
     <script type="module" src="../../../build/pages/teacher/schedule.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <title>Agenda</title>
+    <title>Turmasxl</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+        <div class="container-fluid" >
             <img class="header-logo" src="/frontend/assets/logo-icon-horizontal-pink.svg" alt="Logo Pequeno Vínculo"
                 style="height: 6vh; width: 100px;">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -53,17 +53,29 @@
         <div class="page-title">
             <h4>Turmas</h4>
         </div>
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Accordion Item #1
-                    </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                        the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        <div class="classes">
+            <div class="class-one"> <!-- Adicionando um accordion -->
+                <div class="accordion" id="studentsAccordion"> <!-- Seção do Accordion -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="sectionOneHeader">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#sectionOneCollapse" aria-expanded="true"
+                                aria-controls="sectionOneCollapse"> Lista de Estudantes
+                            </button>
+                        </h2>
+                        <div id="sectionOneCollapse" class="accordion-collapse collapse show"
+                            aria-labelledby="sectionOneHeader">
+                            <div class="accordion-body"> <!-- Sua lista de estudantes -->
+                                <div class="students-list">
+                                    <p>Estudante 1</p>
+                                    <p>Estudante 2</p>
+                                    <p>Estudante 3</p>
+                                    <p>Estudante 4</p>
+                                    <p>Estudante 5</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
