--- a/frontend/src/pages/teacher/performance-teacher.html
+++ b/frontend/src/pages/teacher/performance-teacher.html
@@ -53,7 +53,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
         <div class="container-fluid">
             <img class="header-logo" src="/frontend/assets/logo-icon-horizontal-pink.svg" alt="Logo Pequeno Vínculo"
                 style="height: 6vh; width: 100px;">
