start front from gallery

--- a/frontend/src/responsible/teste.html
+++ b/frontend/src/responsible/teste.html
@@ -58,14 +58,18 @@
 </head>
 
 <body>
-    <h1>Grafico Linhas</h1>
-    <canvas id="grafico-linhas" width="800" height="400" style="display: block; width: 946px; height: 473px;"></canvas>
+    <div id="box">
+    </div>
+    <!-- <img src="../../../backend/uploads/picture-1706910817225-498935461-gomes.jpg" alt=""> -->
+
+    <!-- <h1>Grafico Linhas</h1>
+    <canvas id="grafico-linhas" width="800" height="400" style="display: block; width: 946px; height: 473px;"></canvas> -->
     <!-- <h1>Grafico Colunas</h1>
     <canvas id="grafico-colunas" width="962" height="481" style="display: block; width: 962px; height: 481px;"></canvas>
     <h1>Grafico Pizza</h1>
     <canvas id="grafico-pizza" width="400" height="200"></canvas> -->
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var ctxLinhas = document.getElementById("grafico-linhas").getContext("2d");
         var chartLinhas = new Chart(ctxLinhas, {
             type: 'line',
@@ -124,7 +128,7 @@
         //         }]
         //     }
         // });
-    </script>
+    </script> -->
 
 	<!-- <div class="classes-schedule">
 		<div class="class-one-schedule">
