--- a/frontend/src/pages/teacher/classes-teacher.html
+++ b/frontend/src/pages/teacher/classes-teacher.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">   b
         <div class="container-fluid" >
             <img class="header-logo" src="/frontend/assets/logo-icon-horizontal-pink.svg" alt="Logo Pequeno Vínculo"
                 style="height: 6vh; width: 100px;">
