--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -10,7 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
     <script type="module" src="../../../build/pages/teacher/schedule.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <title>Agenda</title>
 </head>
 
@@ -51,13 +53,28 @@
         <div class="page-title">
             <h4>Agenda</h4>
         </div>
-        <div class="classes-schedule">
-            <!-- <div class="class-one-schedule">
-                <h5>Agenda Turma 1</h5>
-                <span class="material-symbols-outlined" id="add">
-                    add
-                </span>
-            </div> -->
+        <div class="classes-schedule"></div>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <div class="modal-info">
+                    <div>
+                        <span class="close">&times;</span>
+                    </div>
+                    <p class="modal-title">Adicionar lembrete</p>
+                </div>
+                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class">
+                <input type="text" placeholder="Título" class="input-title">
+                <div class="reminder-content">
+                    <textarea type="text" placeholder="Insira a mensagem" class="input-message"></textarea>
+                    <label for="fileInput" class="clip-wrapper">
+                        <span class="material-symbols-outlined" id="clip">
+                            attach_file
+                        </span>
+                        <input type="file" id="fileInput" class="hidden">
+                    </label>
+                </div>
+                <button class="add-reminder-button">Adicionar</button>
+            </div>
         </div>
     </main>
 
