--- a/frontend/src/pages/teacher/performance-teacher.html
+++ b/frontend/src/pages/teacher/performance-teacher.html
@@ -10,48 +10,11 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
+    <link rel="stylesheet" href="/frontend/src/styles/performance-teacher.css">
     <script type="module" src="../../../build/pages/teacher/performance.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <style>
-        .rating {
-            display: flex;
-        }
-
-        .rating input {
-            display: none;
-        }
-
-        .rating label {
-            cursor: pointer;
-            font-size: 24px;
-            color: #ddd;
-        }
-
-        .rating label:hover,
-        .rating label:hover~label {
-            color: #f39c12;
-        }
-
-        .rating input:checked~label,
-        .rating input:checked~label:hover,
-        .rating input:checked~label:hover~label {
-            color: #f39c12;
-        }
-
-        #submitBtn {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 18px;
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
-    <title>Perfomance</title>
+    <title>Desempenho</title>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
         <div class="container-fluid">
@@ -89,7 +52,7 @@
         <div class="page-title">
             <h4>Avaliar</h4>
         </div>
-        <div class="classes-schedule">
+        <div class="classes-performances">
             <!-- <div class="class-one-schedule">
                 <h5>Agenda Turma 1</h5>
                 <div class="rating">
