--- a/frontend/src/pages/guardian/dashboard-guardian.html
+++ b/frontend/src/pages/guardian/dashboard-guardian.html
@@ -10,7 +10,11 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/dashboard-guardian.css">
     <script type="module" src="../../../build/pages/guardian/dashboard.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <title>Dashboard Responsável</title>
 </head>
 
@@ -58,13 +62,14 @@
             <div class="summary-notification">
                 <h5>Notificações</h5>
                 <div class="notification">
-                    
+
                 </div>
             </div>
         </div>
         <div class="summary-last-info">
             <div class="last-info-children-evaluation">
                 <h5>Desempenho dos filhos</h5>
+
             </div>
             <div class="last-info-calendar">
                 <h5>Calendário</h5>
