--- a/frontend/src/pages/guardian/dashboard-guardian.html
+++ b/frontend/src/pages/guardian/dashboard-guardian.html
@@ -70,7 +70,7 @@
             
             <div class="last-info-children-evaluation" id="last-info-children-evaluation">
                 <h5>Desempenho dos filhos</h5>
-                <div id="bests"></div>
+                <div id="bests" class="d-flex"></div>
             </div>
             <div class="last-info-calendar">
                 <h5>Calendário</h5>
