criação da tela de chamada, finalização de parte da tela de avaliação do aluno, professor agora também analisa a média do aluno.

--- a/frontend/src/pages/student/dashboard-student.html
+++ b/frontend/src/pages/student/dashboard-student.html
@@ -10,11 +10,12 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <!-- <link rel="stylesheet" href="/frontend/src/styles/dashboard-guardian.css"> -->
     <!-- <script type="module" src="../../../build/pages/guardian/dashboard.js" defer></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dashboard-student.css">
-    <script type="module" src="dashboard.ts"></script>
+    <script type="module" src="../../../build/pages/student/dashboard.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <title>Dashboard Estudante</title>
 </head>
@@ -49,73 +50,15 @@
             </div>
         </div>
     </nav>
-    <main class="d-flex m-4 p-4">
-        <div id="student-info" class="p-3 bg-purple rounded-3">
-            <h2>Guilherme Pires Viana</h2>
+    <main class="container-fluid">
+        <div class="row">
+            <div id="student-info" class="col-lg-3 p-3 bg-purple rounded-3">
+                <!-- <h2>Guilherme Pires Viana</h2>
             <p>turma : 2</p>
-            <p>filho de : blabla</p>
-        </div>
-        <div id="dashboard" class="border bg-green rounded-3 p-3">
-            <div align="center">
-                <a href="https://github.com/piresGuilherme">
-                    <img height="180em"
-                        src="https://github-readme-stats.vercel.app/api?username=piresGuilherme&show_icons=true&theme=tokyonight&include_all_commits=true&count_private=true" />
-                    <img height="180em"
-                        src="https://github-readme-stats.vercel.app/api/top-langs/?username=piresGuilherme&layout=compact&langs_count=7&theme=tokyonight" />
+            <p>filho de : blabla</p> -->
             </div>
-
-
-            <div style="display: inline_block" align="center"><br>
-                <img align="center" alt="piresGuilherme-Js" height="30" width="40"
-                    src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
-                <img align="center" alt="piresGuilherme-Ts" height="30" width="40"
-                    src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
-                <img align="center" alt="piresGuilherme-HTML" height="30" width="40"
-                    src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-                <img align="center" alt="piresGuilherme-CSS" height="30" width="40"
-                    src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
-                <img align="center" alt="piresGuilherme-CSS" height="30" width="40"
-                    src="https://github.com/devicons/devicon/blob/master/icons/php/php-original.svg">
-                <img align="center" alt="piresGuilherme-CSS" height="30" width="40"
-                    src="https://github.com/devicons/devicon/blob/master/icons/nodejs/nodejs-original.svg">
-                <img align="center" alt="piresGuilherme-CSS" height="30" width="40"
-                    src="https://github.com/devicons/devicon/blob/master/icons/mysql/mysql-original-wordmark.svg">
+            <div id="dashboard" class="col-lg-9 d-flex flex-column border bg-green rounded-3 p-3">
             </div>
-
-            #
-
-            ![Snake
-            animation](https://github.com/RobertoDebarba/RobertoDebarba/blob/output/github-contribution-grid-snake.svg)
-            <div>
-
-                <a href="https://instagram.com/g._pires" target="_blank"><img
-                        src="https://img.shields.io/badge/-Instagram-%23E4405F?style=for-the-badge&logo=instagram&logoColor=white"
-                        target="_blank"> <a href="https://www.linkedin.com/in/guilherme-pires-viana-3a0851212/"
-                        target="_blank"><img
-                            src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white"
-                            target="_blank"><a href="mailto:vianaguilhermepv@gmail.com"><img
-                                src="https://img.shields.io/badge/-Gmail-%23333?style=for-the-badge&logo=gmail&logoColor=white"
-                                target="_blank"></a></a>
-
-            </div>
-
-
-
-            <!--
-          **piresGuilherme/piresGuilherme** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-          
-          Here are some ideas to get you started:
-          
-          - 🔭 I’m currently working on ...
-          - 🌱 I’m currently learning ...
-          - 👯 I’m looking to collaborate on ...
-          - 🤔 I’m looking for help with ...
-          - 💬 Ask me about ...
-          - 📫 How to reach me: ...
-          - 😄 Pronouns: ...
-          - ⚡ Fun fact: ...
-          -->
-
         </div>
     </main>
 </body>
