--- a/frontend/src/pages/admin/register-class-admin.html
+++ b/frontend/src/pages/admin/register-class-admin.html
@@ -10,7 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/register-users-admin.css">
     <script type="module" src="../../../build/pages/admin/register-class.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <title>Cadastrar Ususários</title>
 </head>
 
@@ -43,7 +45,7 @@
     </nav>
     <main>
         <div class="page-title">
-            <h4>Cadastrar Usuários</h4>
+            <h4>Cadastrar Classe</h4>
         </div>
         <div class="register-info">
             <div class="register-info-name">
@@ -51,11 +53,16 @@
             </div>
             <div class="register-info-adress">
                 <input type="number" placeholder="capacidade" class="input-capacity">
-                <input type="text" placeholder="período" class="input-shift">
-                <input type="text" placeholder="Professor" class="input-professor" id="professorInput">
+                <select id="shiftSelect" class="input-shift">
+                    <option value="">Selecione um turno</option>
+                    <option value="MORNING">Matutino</option>
+                    <option value="AFTERNOON">Vespertino</option>
+                    <option value="NIGHT">Noturno</option>
+                </select> <input type="text" placeholder="Professor" class="input-professor" id="professorInput">
                 <div id="professorList"></div>
+                <input type="text" id="id-teacher" hidden>
             </div>
-    
+
             <div class="button-register">
                 <button class="register-info-btn">Cadastrar</button>
             </div>
