--- a/frontend/src/pages/teacher/classes-teacher.html
+++ b/frontend/src/pages/teacher/classes-teacher.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/frontend/src/styles/performance-teacher.css">
+    <link rel="stylesheet" href="/frontend/src/styles/classes-teacher.css">
     <script type="module" src="../../../build/pages/teacher/classes-teacher.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -55,7 +55,7 @@
         <div class="page-title">
             <h4>Chamada</h4>
         </div>
-        <div class="classes-performances">
+        <div class="classes-attendance">
         </div>
     </main>
 
