ajustes galeria responsável

--- a/frontend/src/pages/guardian/gallery-dashboard-guardian.html
+++ b/frontend/src/pages/guardian/gallery-dashboard-guardian.html
@@ -47,7 +47,11 @@
     <main class="">
         <div class="d-flex flex-direction-row m-5 flex-wrap justify-content-center gap-4" id="box"></div>
         <div id="myModal" class="modal">
-            <span class="close">&times;</span>
+            <div class="d-flex justify-content-end">
+                <span class="material-symbols-outlined" id="close">
+                    close
+                    </span>
+            </div>
             <img class="modal-content" id="modalImage">
             <div id="caption" class="d-flex justify-content-center"></div>
         </div>
