--- a/frontend/src/pages/guardian/gallery-guardian.html
+++ b/frontend/src/pages/guardian/gallery-guardian.html
@@ -44,14 +44,11 @@
             </div>
         </div>
     </nav>
-    <main class="">
-        <div class="classes-performances"></div>
-        <!-- <div class="d-flex flex-direction-row m-5 flex-wrap justify-content-center gap-4" id="box"></div>
-        <div id="myModal" class="modal">
-            <span class="close">&times;</span>
-            <img class="modal-content" id="modalImage">
-            <div id="caption" class="d-flex justify-content-center"></div>
-        </div> -->
+    <main>
+        <div class="page-title">
+            <h4>Galeria</h4>
+        </div>
+        <div class="classes-gallery"></div>
     </main>
 
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
