--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -62,7 +62,7 @@
                     </div>
                     <p class="modal-title">Adicionar lembrete</p>
                 </div>
-                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class">
+                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class" id="input-class" disabled>
                 <input type="text" placeholder="Título" class="input-title">
                 <div class="reminder-content">
                     <textarea type="text" placeholder="Insira a mensagem" class="input-message"></textarea>
